Simple OpenAPI + JWT/Security implementation
